--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-.vercel
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
+# Vercel deployment
+.vercel/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
+
+# Build outputs (if applicable)
+dist/
+build/
+
+# Optional: public uploads or temp data (if dynamically generated)
+public/uploads/
+tmp/
